<resources>
    <string name="app_name">Te Entrega</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="express">Entrega relâmpago</string>
    <string name="economic">Maior economia</string>
    <string name="dont_have_account">Não tenho uma conta.</string>
    <string name="enter">Entrar</string>
    <string name="create">Criar</string>
    <string name="already_have_account">Já tenho uma conta.</string>
    <string name="app_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam tincidunt blandit eros ac ullamcorper.</string>
    <string name="welcome">Bem vindo!</string>
    <string name="login_title">Digite os seus dados</string>
    <string name="register_title_1">Qual o seu número de telefone?</string>
    <string name="register_title_2">Escolha uma senha</string>
    <string name="register_title_3">Qual o seu nome?</string>
    <string name="register_title_4">Qual o seu CPF?</string>
    <string name="create_an_account">Criar uma conta</string>
    <string name="register_title_5">Qual o seu endereço?</string>
    <string name="register_input_phone_number">Digite o seu número de telefone</string>
    <string name="register_input_password">Digite a sua senha</string>
    <string name="register_input_confirm_password">Confirme a sua senha</string>
    <string name="register_input_cpf">Digite o seu CPF</string>
    <string name="register_input_cep">Digite o CEP</string>
    <string name="register_input_number">Digite o número</string>
    <string name="register_input_extra">Digite o complemento, se houver</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="verify">Verificar</string>
    <string name="proceed">Continuar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seta_para_voltar">Seta para voltar</string>
    <string name="estado">Estado</string>
    <string name="register_input_name">Digite o seu nome</string>
    <string name="register_input_last_name">Digite o seu sobrenome</string>
    <string name="finish">Finalizar</string>
    <string name="created_account_description">Que tal enviar o seu\nprimeiro pacote?</string>
    <string name="created_account">Conta criada!</string>
    <string name="checkmark">A blue checkmark</string>
    <string name="take_to_homepage">Me leve a pagina inicial</string>
    <string name="send_package">Enviar um pacote</string>
    <string name="tracking">Rastreio</string>
    <string name="send">Envio</string>
    <string name="dashboard_input_address">Para onde?</string>
    <string name="last_shipments">Seus últimos envios</string>
    <string name="profile">Perfil</string>
    <string name="empty_shipping_history">Você não enviou nada ainda!</string>
    <string name="empty_shipping_history_description">Seus últimos envios serão\nmostrados aqui.</string>
    <string name="sad_face">:(</string>
    <string name="send_package_location">Para onde vamos enviar?</string>
    <string name="input_send_package_address">Digite o endereço</string>
    <string name="send_package_fees">Escolha um frete</string>
    <string name="send_package_payment_method">Escolha uma forma de pagamento</string>
    <string name="change">Trocar</string>
    <string name="done">Prontinho!</string>
    <string name="package_sent_description">Em alguns minutos, um transporte\nchegará para recolher o seu pacote.</string>
    <string name="send_another_package">Enviar outro pacote</string>
    <string name="dashboard_input_track_code">Insira o código de rastreio</string>
    <string name="track_package">Rastrear um pacote</string>
    <string name="ongoing_tracking">Rastreios em andamento</string>
    <string name="empty_tracking_history_description">Seusrastreios em andamento\nserão mostrados aqui.</string>
    <string name="empty_tracking_history">Você não está rastreando\nnenhum pacote!</string>


</resources>