<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.createaccount.CreateAccountSecondFragment">

    <TextView android:id="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/highlight"
        android:textFontWeight="@integer/bold"
        android:text="@string/register_title_2" />

    <com.google.android.material.textfield.TextInputLayout android:id="@+id/password"
        style="@style/Input.Contrast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:ems="10"
        app:passwordToggleEnabled="true"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/register_input_password">

        <com.google.android.material.textfield.TextInputEditText android:id="@id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:maxLength="11"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout android:id="@+id/confirm_password"
        style="@style/Input.Contrast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:passwordToggleEnabled="true"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/register_input_confirm_password">

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/confirm_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:maxLength="11"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>