<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        tools:context=".ui.activity.LoginActivity">

        <TextView android:id="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/highlight"
            android:textFontWeight="@integer/bold"
            android:text="@string/login_title" />

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/username"
            style="@style/Input.Contrast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:ems="10"
            android:hint="@string/register_input_username">

            <com.google.android.material.textfield.TextInputEditText android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                android:background="@android:color/transparent"
                android:ems="10"
                android:maxLength="16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/password"
            style="@style/Input.Contrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_input_password"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/username"
            app:layout_constraintStart_toStartOf="@id/username"
            app:layout_constraintTop_toBottomOf="@id/username">

            <com.google.android.material.textfield.TextInputEditText android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPassword"
                android:autofillHints="password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button android:id="@+id/button_enter_account"
            style="@style/Button.Default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAllCaps="false"
            android:text="@string/enter" />

        <Button android:id="@+id/button_login"
            style="@style/Button.WithoutBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom = "16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAllCaps="false"
            tools:text="Não tenho uma conta. Criar uma nova conta." />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>