<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.createaccount.CreateAccountFirstFragment">

    <TextView android:id="@+id/title_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/text_main"
        android:textFontWeight="@integer/bold"
        android:text="@string/send_package" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address"
        style="@style/Input.Contrast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_main"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:autofillHints="postalAddress"
        android:hint="@string/dashboard_input_address">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:drawableEnd="@drawable/location"
            android:drawablePadding="10dp"
            android:inputType="textPostalAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView android:id="@+id/title_secondary"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/text_main"
        android:textFontWeight="@integer/bold"
        android:text="@string/last_shipments" />

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/empty_shipments"
        android:layout_marginVertical="20dp"
        android:paddingVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_secondary"
        android:background="@drawable/round_outline"
        android:orientation="vertical">

        <TextView
            android:rotation="90"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/highlight"
            android:textFontWeight="@integer/bold"
            android:textSize="36sp"
            tools:text=":(" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/highlight"
            android:textFontWeight="@integer/bold"
            android:textSize="20sp"
            tools:text="Você não enviou nada ainda!" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/highlight"
            android:textFontWeight="@integer/regular"
            android:textSize="20sp"
            tools:text="Seus últimos envios serão\nmostrados aqui." />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shipments_list"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_secondary"
        tools:listitem="@layout/package_information">
    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>